fixed wrapping heights

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,11 @@
 }
 
 .vis {
-    width: var(--vWid);
-    height: var(--height);
     float: left;
     overflow: visible;
     clear:left;
+    position:relative;
+    display:inline-block;
     margin-left:0;
 }
 
@@ -23,14 +23,17 @@
     width: calc(var(--vWid)+var(--lWidth));
     height: var(--height);
     float: none;
+    position:relative;
+    display:block;
 }
 
 .legend {
     width: var(--lWidth);
-    height: var(--height);
+    height: 1500px;
     float: left;
+    position:relative;
     display:inline-block;
-    white-space:wrap;
+    white-space:nowrap;
 }
 
 .visSVG {
